# sus-client

./: .gitignore  Cargo.toml  README.md  clear_db.py  client.py  client_with_clean_up.py  env.example  generate_messages.py  pyproject.toml  remove_all_generated_files.py  remove_non_results_files.py  remove_previous_files.py  requirements.txt  test.py
Data/: 0.json  15.json  16.json  17.json  18.json  2.json  3.json
src/: lib.rs  magic.rs
src/magic/: enums_structs.rs  mod.rs  state.rs
