[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "app"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
dotenv = "0.15.0"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
threadpool = "1.8.1"
